tests/errors/syn_class_var2.java
public class syn_class_var2 {
public String[] name ;
}